2005-02-18  Robert Schuster  <thebohemian@gmx.net>

	* java/nio/channels/Channels: Added FIXMEs about
	stub method implementation.
	(newReader): Implemented.
	* java/io/InputStreamReader:
	(InputStreamReader(InputStream, Charset)): Implemented.
	(InputStreamReader(InputStream, CharsetDecoder)): Implemented.
	* gnu/java/nio/ChannelReader: New class.

2005-02-21  Michael Koch  <konqueror@gmx.de>

	* include/gnu_java_nio_channels_FileChannelImpl.h:
	Regenerated.

2005-02-21  Michael Koch  <konqueror@gmx.de>

	* java/lang/Class.java,
	java/lang/SecurityManager.java,
	java/net/URL.java:
	Formatting cleanups.

2005-02-21  Michael Koch  <konqueror@gmx.de>

	* java/awt/Button.java,
	java/awt/Container.java,
	java/awt/Font.java,
	java/awt/Frame.java,
	java/text/CollationElementIterator.java,
	java/text/RuleBasedCollator.java,
	java/util/PropertyPermission.java:
	Fixed formatting issues all over.

2005-02-21  Anthony Green  <green@redhat.com>

	* gnu/java/rmi/registry/RegistryImpl.java:
	Change year for '--version' to 2005.

2005-02-20  Andrew John Hughes  <gnu_andrew@member.fsf.org>

	Merge of interfaces and exceptions to HEAD from
	the generics branch.

	* java/lang/StringBuilder.java: Serial version updated.
	* java/lang/annotation/AnnotationTypeMismatchException.java: Likewise.

	Changes from generics branch:
	
	2005-02-20  Andrew John Hughes  <gnu_andrew@member.fsf.org>

	* java/io/Closeable.java: Documented.
	* java/io/Flushable.java: Documented.
	* java/lang/Appendable.java: Corrected line overrun.
	* java/lang/Readable.java: Corrected indentation.
	* java/lang/TypeNotPresentException.java: Documented.
	* java/lang/annotation/AnnotationFormatError.java: Likewise.
	* java/lang/annotation/AnnotationTypeMismatchException.java: Likewise.
	* java/lang/reflect/GenericArrayType.java: Likewise.
	* java/lang/reflect/GenericSignatureFormatError.java: Likewise.
	* java/lang/reflect/ParameterizedType.java: Likewise.
	* java/lang/reflect/Type.java: Likewise.