@@ -1,4 +1,8 @@
-2005-02-18  Robert Schuster  <thebohemian@gmx.net>
+2005-02-21  Robert Schuster  <thebohemian@gmx.net>
+	
+	* gnu/java/nio/ChannelReader: Fixed comments.
+
+2005-02-21  Robert Schuster  <thebohemian@gmx.net>
 
 	* java/nio/channels/Channels: Added FIXMEs about
 	stub method implementation.
